[package]
name = "kvs"
version = "0.1.0"
authors = ["Sergej P."]
description = "Networked key-value database"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.4"
criterion = "0.4.0"
predicates = "2.1.1"

[[bin]]
name = "kvs"
test = false

[lib]
test = false

[[bench]]
name = "kvstore_bench"
harness = false
