[package]
name = "kvs"
version = "0.1.0"
authors = ["Sergej P."]
description = "Networked key-value database"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
clap = { version = "4.0.14", features = ["derive"] }
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[dev-dependencies]
assert_cmd = "2.0.4"
criterion = "0.4.0"
predicates = "2.1.1"

[[bin]]
name = "kvs"
test = false

[lib]
test = false

[[bench]]
name = "kvstore_bench"
harness = false
